--- a/templates/index.html
+++ b/templates/index.html
@@ -7,17 +7,16 @@
 </head>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <script src="https://kit.fontawesome.com/640841a963.js" crossorigin="anonymous"></script>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+<link href="https://fonts.cdnfonts.com/css/mona-sans" rel="stylesheet">
+                
 <link rel="stylesheet" href="../static/style.css">
 <body>
   <div class="row">
     <div class="col-sm-6">
       <div class="card">
-        <div class="card-body bg-light">
+        <div class="card-body banner">
           <nav class="navbar navbar-expand-lg navbar-light">
-            <a class="navbar-brand" href="#"><strong class="fs-4">Bland.</strong></a>
+            <a class="navbar-brand title" href="#"><strong class="fs-4">Bland.</strong></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -40,20 +39,20 @@
           </nav>
           <div class="container">
             <div class="mt-4 p-5 rounded" tabindex="0">
-              <h1 class="h1" style="font-size: 4rem;">What Book <br> Are You <span><img src="https://img.icons8.com/?size=100&id=vLNHbKb4CBCl&format=png&color=000000" alt=""></span> <br> Looking For</h1>
+              <h1 class="h1 title">What Book <br> Are You <span><img src="https://img.icons8.com/?size=100&id=vLNHbKb4CBCl&format=png&color=000000" alt=""></span> <br> Looking For</h1>
               <br>
               <p class="fs-5 text-secondary">Not sure What to read Next? Explore Our Catalog <br> of public Domain Books with our Editors</p>
-              <button class="btn btn-outline-dark">Explore Now</button>
-              <button class="btn btn-dark "><i class="fa-solid fa-arrow-right"></i></button>
+              <button class="btn btn-outline-dark explore-button">Explore Now</button>
+              <button class="btn btn-dark icon-button"><i class="fa-solid fa-arrow-right"></i></button>
             </div>
             <div class="container">
               <div class="mt-4 p-5 rounded" tabindex="0">
-                <p class="fs-7 text-secondary">OUR COMMUNITY</p>
+                <p class="fs-7 text-secondary community">OUR COMMUNITY</p>
                 <i class="fa-regular fa-circle-user fs-1"></i>
                 <i class="fa-regular fa-circle-user fs-1"></i>
                 <i class="fa-regular fa-circle-user fs-1"></i>
-                <span class="h1" style="margin-left: 3rem; font-weight: bold;">40k+</span>
-                <p style="margin-left: 11.2rem;" class="text-secondary justify-content-end">Book lovers joined</p>
+                <span class="h1 users">40k+</span>
+                <p class="text-secondary justify-content-end joined-users">Book lovers joined</p>
               </div>
             </div>
           </div>
@@ -62,11 +61,8 @@
     </div>
     <div class="col-sm-6">
       <div class="card">
-        <div class="card-body bg-light">
+        <div class="card-body image-card">
           <nav class="navbar navbar-expand-lg navbar-light">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarText">
               <ul class="navbar-nav">
                 <li class="nav-item active">
@@ -75,10 +71,91 @@
               </ul>
             </div>
           </nav>
-
+          <img src="../static/study.png"  width="88.21%" height="auto" alt="">
         </div>
       </div>
     </div>
-  </div>  
+  </div> 
+  <br>
+  <br>
+  
+  <div class="card banner trending-card">
+    <h1 class="h1 trending-title">Top Trending Books</h1>
+    <p class="fs-4 trending-description">Most Popular Reads of the Year</p>
+    <br>
+    <br>
+  </div>
+
+  <br>
+  <br>
+  <div class="row">
+    <div class="col-sm-4">
+      <div class="card">
+        <div class="card-body first-product">
+          <div class="container">
+            <div class="mt-4 p-5 rounded" tabindex="0">
+              <nav class="navbar navbar-expand-lg navbar-light">
+                <div class="collapse navbar-collapse justify-content-end" id="navbarText">
+                  <ul class="navbar-nav">
+                    <li class="nav-item active">
+                      <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                    </li>
+                  </ul>
+                </div>
+              </nav>
+              <p class="fs-5 description text-secondary">System Design</p>
+              <p class="fs-4 description price">$25</p>
+              <img class="rounded mx-auto d-block img-fluid"  src="../static/the-system-design-interview.png" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-4">
+      <div class="card">
+        <div class="card-body second-product">
+          <div class="container">
+            <div class="mt-4 p-5 rounded" tabindex="0">
+              <nav class="navbar navbar-expand-lg navbar-light">
+                <div class="collapse navbar-collapse justify-content-end" id="navbarText">
+                  <ul class="navbar-nav">
+                    <li class="nav-item active">
+                      <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                    </li>
+                  </ul>
+                </div>
+              </nav>
+              <p class="fs-5 description text-secondary">Design Sponge</p>
+              <p class="fs-4 description price">$45</p>
+              <img class="rounded mx-auto d-block img-fluid" src="../static/design-sponge-at-home.webp" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-4">
+      <div class="card">
+        <div class="card-body third-product">
+          <div class="container">
+            <div class="mt-4 p-5 rounded" tabindex="0">
+              <nav class="navbar navbar-expand-lg navbar-light">
+                <div class="collapse navbar-collapse justify-content-end" id="navbarText">
+                  <ul class="navbar-nav">
+                    <li class="nav-item active">
+                      <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                    </li>
+                  </ul>
+                </div>
+              </nav>
+              
+              <p class="fs-5 description text-secondary">Sprint</p>
+              <p class="fs-4 description price">$24</p>
+              <img class="rounded mx-auto d-block img-fluid"  src="../static/sprint.png" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div> 
 </body>
 </html>
