[fe][homepage] update homepage

--- a/templates/index.html
+++ b/templates/index.html
@@ -38,18 +38,15 @@
             </div>
           </nav>
           <div class="container">
-            <div class="mt-4 p-5 rounded" tabindex="0">
-              <h1 class="display-3 fw-bold">What Book <br> Are You <span><img src="https://img.icons8.com/?size=100&id=vLNHbKb4CBCl&format=png&color=000000" alt=""></span> <br> Looking For</h1>
+            <div class="mt-4 p-5 " tabindex="0">
+              <h1 class="display-3 fw-bold">What Book <br> Are You <span><img class="img-fluid" src="https://img.icons8.com/?size=100&id=vLNHbKb4CBCl&format=png&color=000000" alt=""></span> <br> Looking For</h1>
               <br>
               <p class="fs-5 text-secondary">Not sure What to read Next? Explore Our Catalog <br> of public Domain Books with our Editors</p>
               <div class="col-lg-12">
                 <button class="btn btn-outline-dark btn-lg">Explore Now</button>
                 <button class="btn btn-dark btn-lg"><i class="fa-solid fa-arrow-right"></i></button>
               </div>
-
-            </div>
-            <div class="container">
-              <div class="mt-4 p-5 rounded" tabindex="0">
+              <div class="mt-4 p-5 " tabindex="0">
                 <p class="fs-7 text-secondary fw-bold">OUR COMMUNITY</p>
                 <i class="fa-regular fa-circle-user fs-1"></i>
                 <i class="fa-regular fa-circle-user fs-1"></i>
@@ -74,7 +71,7 @@
               </ul>
             </div>
           </nav>
-          <img src="../static/study.png"  style="width: 100%;  height: 47.7vw; object-fit: contain;" alt="">
+          <img class="img-fluid" src="../static/study.png"  style="width: 100%;  height: 51.2vw; object-fit: contain; box-sizing: border-box;" alt="">
         </div>
       </div>
     </div>
@@ -100,7 +97,7 @@
       <div class="card">
         <div class="card-body first-product">
           <div class="container">
-            <div class="mt-4 p-5 rounded" tabindex="0">
+            <div class="mt-4 p-5 " tabindex="0">
               <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="collapse navbar-collapse justify-content-end" id="navbarText">
                   <ul class="navbar-nav">
@@ -112,7 +109,7 @@
               </nav>
               <p class="fs-5 description text-secondary">System Design</p>
               <p class="fs-4 description price">$25</p>
-              <img style="width: 100%;  height: 25vw; object-fit: cover;"  src="../static/the-system-design-interview.png" alt="">
+              <img style="width: 100%;  height: 25vw; object-fit: cover; box-sizing: border-box;"  src="../static/the-system-design-interview.png" alt="">
             </div>
           </div>
         </div>
@@ -122,7 +119,7 @@
       <div class="card">
         <div class="card-body second-product">
           <div class="container">
-            <div class="mt-4 p-5 rounded" tabindex="0">
+            <div class="mt-4 p-5 " tabindex="0">
               <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="collapse navbar-collapse justify-content-end" id="navbarText">
                   <ul class="navbar-nav">
@@ -134,7 +131,7 @@
               </nav>
               <p class="fs-5 description text-secondary">Design Sponge</p>
               <p class="fs-4 description price">$45</p>
-              <img style="width: 100%;  height: 30vw; object-fit: cover;" src="../static/design-sponge-at-home.webp" alt="">
+              <img style="width: 100%;  height: 30vw; object-fit: cover; box-sizing: border-box;" src="../static/design-sponge-at-home.webp" alt="">
             </div>
           </div>
         </div>
@@ -144,7 +141,7 @@
       <div class="card">
         <div class="card-body third-product">
           <div class="container">
-            <div class="mt-4 p-5 rounded" tabindex="0">
+            <div class="mt-4 p-5 " tabindex="0">
               <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="collapse navbar-collapse justify-content-end" id="navbarText">
                   <ul class="navbar-nav">
@@ -157,7 +154,7 @@
               
               <p class="fs-5 description text-secondary">Sprint</p>
               <p class="fs-4 description price">$24</p>
-              <img style="width: 100%;  height: 25vw; object-fit: cover;"  src="../static/sprint.png" alt="">
+              <img style="width: 100%;  height: 25vw; object-fit: cover; box-sizing: border-box;"  src="../static/sprint.png" alt="">
             </div>
           </div>
         </div>
@@ -171,26 +168,25 @@
   <div class="row">
     <div class="col-sm-12">
       <div class="card">
-          <div class="card-body">
-            <div class="container mx-auto">
-              <div class="parent">
-                <p class="child h5">BEST SELLERS</p>
-                <i class="fa-solid fa-star-of-life child p-1 mx-5"></i>
-                <p class="child h5">BEST SELLERS</p>
-                <i class="fa-solid fa-star-of-life child p-1 mx-5"></i>
-                <p class="child h5">BEST SELLERS</p>
-                <i class="fa-solid fa-star-of-life child p-1 mx-5"></i>
-                <p class="child h5">BEST SELLERS</p>
-                <i class="fa-solid fa-star-of-life child p-1 mx-5"></i>
-                <p class="child h5">BEST SELLERS</p>
-              </div>
+        <div class="card-body">
+          <div class="container mx-auto">
+            <div class="best-seller">
+              <p class="d-flex h5">BEST SELLERS</p>
+              <i class="fa-solid fa-star-of-life child p-1 mx-5"></i>
+              <p class="d-flex h5">BEST SELLERS</p>
+              <i class="fa-solid fa-star-of-life child p-1 mx-5"></i>
+              <p class="d-flex h5">BEST SELLERS</p>
+              <i class="fa-solid fa-star-of-life child p-1 mx-5"></i>
+              <p class="d-flex h5">BEST SELLERS</p>
+              <i class="fa-solid fa-star-of-life child p-1 mx-5"></i>
+              <p class="d-flex h5">BEST SELLERS</p>
             </div>
-          </div>          
-        </div>
+          </div>
+        </div>          
       </div>
     </div>
-    
   </div>
+
 
   <br>
   <br>
@@ -198,7 +194,7 @@
   <div class="row">
     <div class="col-sm-6">
       <div class="card">
-          <img src="../static/book.jpg" style="width: 100%;  height: 25vw; object-fit: cover;" alt="">
+          <img src="../static/book.jpg" style="width: 100%;  height: 25vw; object-fit: cover; box-sizing: border-box;" alt="">
       </div>
       
 
@@ -208,7 +204,7 @@
       <div class="card">
         <div class="card-body banner">
           <div class="container">
-            <div class="p-5 mb-4 rounded">
+            <div class="p-5 mb-4 ">
               <h1 class="h1 fw-bold">Book Club <br> Meetup</h1>
               <p class="fs-4 text-secondary">Gathering of Minds and Books</p>
               <div class="col-lg-12">
@@ -222,7 +218,7 @@
     </div>
     <div class="col-sm-6">
       <div class="card">
-          <img src="../static/girl-reading-book.jpg" style="width: 100%;  height: 49.5vw; object-fit: cover;" alt="">
+          <img src="../static/girl-reading-book.jpg" style="width: 100%;  height: 49.5vw; object-fit: cover; box-sizing: border-box;" alt="">
       </div>
     </div>
   </div> 
