--- a/static/style.css
+++ b/static/style.css
@@ -81,14 +81,6 @@ body{
 }
 
 .best-seller{
-    display: inline-block;
-}
-
-.parent {
     display: flex;
-    flex-direction: row;
-}
-  
-.child {
-    flex-grow: 1;
+    gap: .2rem;
 }
